2009-06-25  Paolo Bonzini  <bonzini@gnu.org>

	* execute.c: Do not copy ACLs until the file is copied.
	* utils.c (ck_mkstemp): Set a restrictive umask on temporary files.

2009-06-26  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Do not use GIT_CONFIG_LOCAL.

2009-06-15  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add memchr again.
	* gnulib: Update.

2009-06-11  Sergey Farbotka  <z8sergey8z@gmail.com>  (tiny change)

	* sed/execute.c (open_next_file): Fix off-by-one causing problems
	under Cygwin.

2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (snarf_char_class): Fix logic bug with [[[ in regular
	expressions (and a possibly uninitialized use of variable delim stemming
	from the bug).  Uninitialized variable bug reported by Zhongxing Xu.
	* testsuite/brackets.good: New.
	* testsuite/brackets.inp: New.
	* testsuite/brackets.sed: New.
	* testsuite/Makefile.am: Add test.
	* testsuite/Makefile.tests: Add test.

2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Define COPYRIGHT_YEAR.
	* Makefile.am (dist-hook): Test it.
	* sed/mbcs.c: Fix copyright years.
	* sed/sed.c: Fix copyright years.  Change COPYRIGHT_NOTICE to
	COPYRIGHT_YEAR.
	* sed/utils.c: Fix copyright years.
	* testsuite/version.gin: Use COPYRIGHT_YEAR.

2009-04-30  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c: Declare bool arguments as int instead to please AIX XLC.
	* sed/execute.c: Declare bool arguments as int instead to please AIX XLC.
	* sed/utils.c: Declare bool arguments as int instead to please AIX XLC.
	* sed/utils.h: Declare bool arguments as int instead to please AIX XLC.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Bump version number.
	* configure: Regenerate.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Do not create homonymous links from builddir to srcdir.
	* testsuite/Makefile.tests: Create readin.in2 here.
	* testsuite/Makefile.am: Do not distribute it.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>
 