@@ -18,9 +18,10 @@
 
 # gnulib modules used by this package.
 gnulib_modules="
-    acl alloca btowc c-ctype extensions getline getopt gettext localcharset \
-    mbrlen mbrtowc mbsinit memchr mkstemp obstack pathmax regex rename stdbool
-    stat-macros strerror strverscmp unlocked-io verify wcrtomb wctob"
+    acl alloca btowc c-ctype extensions getline getopt gettext localcharset
+    mbrlen mbrtowc mbsinit memchr mkstemp obstack pathmax regex rename
+    selinux-h stdbool stat-macros strerror strverscmp unlocked-io verify
+    wcrtomb wctob"
 
 checkout_only_file=
 MSGID_BUGS_ADDRESS=bug-gnu-utils@gnu.org
