@@ -2,6 +2,8 @@ Sed 4.2a
 
 * fix parsing of s/[[[[[[[[[]//
 
+* security contexts are preserved by -i too under SELinux
+
 * temporary files for sed -i are not made group/world-readable until
   they are complete
 
